# jimbo-guide-robot

./: .gitmodules  frames_2025-05-20_10.20.03.gv  frames_2025-05-20_10.30.34.gv
frames/: .gv  frames_2025-06-25_11.01.01.gv  frames_2025-06-26_14.30.27.gv  frames_2025-06-26_15.08.25.gv  frames_2025-06-26_15.12.04.gv
intern-log/: week1.txt
jimbo_guide_uwb/: guide_uwb.ino
ros2_ws/src/jimbo_navigation/: package.xml  setup.cfg
ros2_ws/src/jimbo_navigation/config/: nav2_params.yaml  slam_view.rviz
ros2_ws/src/jimbo_navigation/jimbo_navigation/: safety_monitor.py  tf_test.py  user_follower.py
ros2_ws/src/jimbo_navigation/launch/: jimbo_robot.launch.py  navigation.launch.py  slam.launch.py
ros2_ws/src/jimbo_navigation/maps/: generated_map.yaml  (+1 more)
ros2_ws/src/motor_interface_pkg/: setup.cfg
ros2_ws/src/uwb_interface/: setup.py
src/jimbo_msgs/: CMakeLists.txt  package.xml
src/jimbo_msgs/msg/: MotorRPM.msg
src/jimbo_navigation/: README.md  setup.py
src/jimbo_navigation/config/: nav_view.rviz  robot_view.rviz
src/jimbo_navigation/jimbo_navigation/: safety_monitor.py
src/jimbo_navigation/launch/: complete_system.launch.py  guide_robot.launch.py  jimbo_robot.launch.py  robot_description.launch.py  test_transforms.launch.py
src/jimbo_navigation/urdf/: jimbo_robot.urdf  jimbo_robot.urdf.xacro
src/motor_interface_pkg/: package.xml  setup.py
src/motor_interface_pkg/launch/: motor_serial.launch.py
src/motor_interface_pkg/motor_interface_pkg/: motor_serial_node.py
src/motor_interface_pkg/resource/: motor_interface_pkg
src/uwb_interface/: package.xml
(+2 files in other folders)
