<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_interface_pkg</name>
  <version>0.0.0</version>
  <description>Motor interface Python package</description>
  <maintainer email="jimbo@todo.todo">jimbo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- <build_type>ament_python</build_type> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>jimbo_msgs</exec_depend>

    <export>
      <build_type>ament_python</build_type>
    </export>

</package>
